--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 		<meta property="twitter:description" content="Text">
 		<meta property="twitter:image" content="#">
 		-->
-    <link rel="stylesheet" href="index.css" />
+    <link
+      link
+      rel="preload"
+      as="style"
+      href="index.css"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
