--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
+      rel="preload"
+      as="style"
     />
     <link
       href="    https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800;900&display=swap"
       rel="stylesheet"
+      rel="preload"
+      as="style"
     />
     <title>Research By Learning Hackathon | Techno Cultural Club</title>
   </head>
