--- a/index.html
+++ b/index.html
@@ -5,32 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <!-- Primary Meta Tags -->
-    <!--
-		       <title>Meta Tags — Preview, Edit and Generate</title>
-		      <meta name="title" content="Meta Tags — Preview, Edit and Generate">
-		<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-		-->
-    <!-- Open Graph / Facebook -->
-    <!--
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="#">
-		<meta property="og:title" content="Text">
-		<meta property="og:description" content="Text">
-		<meta property="og:image" content="#">
-		-->
-    <!-- Twitter -->
-    <!--
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="#">
-		<meta property="twitter:title" content="Text">
-		<meta property="twitter:description" content="Text">
-		<meta property="twitter:image" content="#">
-		-->
     <link
+      rel="stylesheet"
       rel="preload"
       as="style"
-      href="index.css"
+      href="styles.css"
       onload="this.onload=null;this.rel='stylesheet'"
     />
     <link
