--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="preload" as="image" href="/images/patternTop.webp" />
     <link
       rel="stylesheet"
       rel="preload"
+      rel="preconnect"
       as="style"
       href="styles.css"
       onload="this.onload=null;this.rel='stylesheet'"
@@ -15,12 +17,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
+      rel="preconnect"
       rel="preload"
       as="style"
     />
     <link
-      href="    https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800;900&display=swap"
       rel="stylesheet"
+      rel="preconnect"
       rel="preload"
       as="style"
     />
