--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="preload" as="image" href="/images/patternTop.webp" />
+    <link rel="preload" as="image" href="/images/2.svg" />
     <link
       rel="stylesheet"
       rel="preload"
@@ -30,160 +30,7 @@
             <div class="">
               <span class="ag mg wg yg th vh xh rc ci fh">
                 <div class="ob zc">
-                  <svg
-                    class="fc ub"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    version="1.1"
-                    id="a"
-                    x="0px"
-                    y="0px"
-                    viewBox="0 0 229 229"
-                    style="enable-background: new 0 0 229 229"
-                    xml:space="preserve"
-                    fill="currentColor"
-                  >
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="b">
-                          <path d="M-84.1,15.3h-8.3v74.3h8.3V15.3z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="c">
-                          <path d="M-67.5,15.3h-8.4v74.3h8.4V15.3z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="d">
-                          <path d="M-59.4,15.3v74.3h8.4V15.3H-59.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="e">
-                          <path d="M-34.5,15.3h-8.3v74.3h8.3V15.3z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="f">
-                          <path d="M-18,15.3h-8.4v74.3h8.4V15.3z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="g">
-                          <path d="M63.4,89.7v-8.4h-74.3v8.4H63.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="h">
-                          <path d="M63.4,73.2v-8.4h-74.3v8.4H63.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="i">
-                          <path d="M63.4,56.7v-8.3h-74.3v8.3H63.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="j">
-                          <path d="M63.4,40.2v-8.4h-74.3v8.4H63.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="k">
-                          <path d="M63.4,23.6v-8.4h-74.3v8.4H63.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="l">
-                          <path d="M63.4,89.7H55v74.3h8.4V89.7z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="m">
-                          <path d="M46.9,89.7h-8.4v74.3h8.4V89.7z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="n">
-                          <path d="M30.3,89.7H22v74.3h8.3V89.7z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="o">
-                          <path d="M13.9,164.1V89.7H5.5v74.3H13.9z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="p">
-                          <path d="M-2.7,89.7h-8.4v74.3h8.4V89.7z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="q">
-                          <path d="M-18.1,164.2v-8.4h-74.3v8.4H-18.1z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="r">
-                          <path d="M-18.1,147.6v-8.3h-74.3v8.3H-18.1z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="s">
-                          <path d="M-18.1,131.1v-8.4h-74.3v8.4H-18.1z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="t">
-                          <path d="M-92.4,106.2v8.4h74.3v-8.4H-92.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                    <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                      <g>
-                        <g id="u">
-                          <path d="M-92.4,89.7v8.3h74.3v-8.3H-92.4z"></path>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
+                  <img src="images/TCC Logo.png" alt="TCC_Logo" class="logo" />
                   <span class="yf cg">Techno Cultural Club, GBU </span>
                 </div>
               </span>
@@ -270,11 +117,7 @@
                 class="gc vb"
                 viewBox="0 0 24 24"
               >
-                <circle cx="6" cy="6" r="3"></circle>
-                <circle cx="6" cy="18" r="3"></circle>
-                <path
-                  d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"
-                ></path>
+                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
               </svg>
             </div>
             <div class="pc kf">
@@ -292,8 +135,7 @@
                 class="gc vb"
                 viewBox="0 0 24 24"
               >
-                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
               </svg>
             </div>
             <div class="pc kf">
@@ -311,8 +153,7 @@
                 class="gc vb"
                 viewBox="0 0 24 24"
               >
-                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
               </svg>
             </div>
             <div class="pc kf">
@@ -330,8 +171,8 @@
                 class="gc vb"
                 viewBox="0 0 24 24"
               >
-                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+              </svg>
               </svg>
             </div>
             <div class="pc kf">
@@ -538,160 +379,7 @@
           <div class="">
             <span class="cg jg bh kl"
               ><div class="ob zc">
-                <svg
-                  class="fc ub"
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  version="1.1"
-                  id="a"
-                  x="0px"
-                  y="0px"
-                  viewBox="0 0 229 229"
-                  style="enable-background: new 0 0 229 229"
-                  xml:space="preserve"
-                  fill="currentColor"
-                >
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="b">
-                        <path d="M-84.1,15.3h-8.3v74.3h8.3V15.3z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="c">
-                        <path d="M-67.5,15.3h-8.4v74.3h8.4V15.3z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="d">
-                        <path d="M-59.4,15.3v74.3h8.4V15.3H-59.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="e">
-                        <path d="M-34.5,15.3h-8.3v74.3h8.3V15.3z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="f">
-                        <path d="M-18,15.3h-8.4v74.3h8.4V15.3z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="g">
-                        <path d="M63.4,89.7v-8.4h-74.3v8.4H63.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="h">
-                        <path d="M63.4,73.2v-8.4h-74.3v8.4H63.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="i">
-                        <path d="M63.4,56.7v-8.3h-74.3v8.3H63.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="j">
-                        <path d="M63.4,40.2v-8.4h-74.3v8.4H63.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="k">
-                        <path d="M63.4,23.6v-8.4h-74.3v8.4H63.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="l">
-                        <path d="M63.4,89.7H55v74.3h8.4V89.7z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="m">
-                        <path d="M46.9,89.7h-8.4v74.3h8.4V89.7z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="n">
-                        <path d="M30.3,89.7H22v74.3h8.3V89.7z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="o">
-                        <path d="M13.9,164.1V89.7H5.5v74.3H13.9z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="p">
-                        <path d="M-2.7,89.7h-8.4v74.3h8.4V89.7z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="q">
-                        <path d="M-18.1,164.2v-8.4h-74.3v8.4H-18.1z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="r">
-                        <path d="M-18.1,147.6v-8.3h-74.3v8.3H-18.1z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="s">
-                        <path d="M-18.1,131.1v-8.4h-74.3v8.4H-18.1z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="t">
-                        <path d="M-92.4,106.2v8.4h74.3v-8.4H-92.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                  <g transform="matrix( 1, 0, 0, 1, 128,27) ">
-                    <g>
-                      <g id="u">
-                        <path d="M-92.4,89.7v8.3h74.3v-8.3H-92.4z"></path>
-                      </g>
-                    </g>
-                  </g>
-                </svg>
+                <img src="images/TCC Logo.png" alt="TCC_Logo" class="logo" />
                 <span class="yf cg">Techno Cultural Club, GBU</span>
               </div>
             </span>
@@ -737,11 +425,10 @@
         </div>
 
         <div class="v ej aj">
-          <p class="ag xf bh">
+          <p class="ag wf bh">
             <span x-text="new Date().getFullYear()"></span>
-            <a href="https://github.com/tejxv/" class="bh bi"
-              >Designed & Developed by @tejxv</a
-            >
+            Designed & Developed by <br>
+            <a href="https://github.com/tejxv/" class="bh bi">@tejxv</a>, <a href="https://github.com/Sk783" class="bh bi">@Sk783</a> & <a href="https://github.com/nipun221" class="bh bi">@nipun221</a>
           </p>
         </div>
       </div>
